# fastcpd_Python

./: .Rbuildignore  .bazelrc  .buildinfo  .clang-format  .gitignore  .readthedocs.yaml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  LICENSE  MANIFEST.in  Makefile  NEWS.md  README.Rmd  README.md  WORKSPACE  _pkgdown.yml  bazelisk.py  build.sh  cran-comments.md  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_lock.txt  search.html  searchindex.js  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bazel_build_linux.yml  bazel_build_windows.yml  bazel_test_mac.yml  build.yml  docs.yml  lint.yml  pkgdown.yaml  python-app.yml  test.yml
_modules/: index.html
_modules/fastcpd/: datasets.html  fastcpd.html  metrics.html  segmentation.html  visualization.html
_sources/advanced/: algorithms.rst.txt  comparison.rst.txt  music_segmentation.rst.txt
_sources/api/: detection.rst.txt  visualization.rst.txt
advanced/: algorithms.html  comparison.html  music_segmentation.html
api/: datasets.html  detection.html  metrics.html  visualization.html
bazel/: README.md  fastcpd_http_archive.bzl  get_python_libs.py  repositories.bzl  repository_locations.bzl  windows_openblas.bzl
bazel/python/: BUILD.tpl  python.bzl  python_native.bzl  variety.tpl
bazel/remote_config/: common.bzl
cc/cclib/: BUILD.bazel  class.cc  class.h  hello-time.cc
cc/main/: BUILD.bazel  hello-world.cc
development/: changelog.html  contributing.html  roadmap.html
docs/: docusaurus.config.ts  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/fastcpd/: datasets.html  fastcpd.html  metrics.html  segmentation.html  visualization.html
docs/_sources/: index.rst.txt
docs/_sources/api/: datasets.rst.txt
docs/_sources/development/: contributing.rst.txt
docs/_sources/user_guide/: evaluation.rst.txt  installation.rst.txt  models.rst.txt  quickstart.rst.txt  tutorials.rst.txt
docs/_static/: custom.css  documentation_options.js
docs/advanced/: algorithms.html  comparison.html
docs/api/: datasets.html  detection.html  metrics.html  visualization.html
docs/development/: changelog.html  contributing.html  roadmap.html
docs/python/: docusaurus.config.ts  package-lock.json  package.json
docs/python/blog/: 2025-06-15-fastcpd-coming-to-python.mdx  authors.yml  tags.yml
docs/python/blog/2021-08-26-welcome/: index.md
docs/python/blog/2025-06-16-python-documentation/: index.md
docs/python/docs/: main-class.md  main-function.md
docs/python/docs/data/: _category_.json  bitcoin.md
docs/python/docs/utility-functions/: _category_.json
docs/python/docs/wrapper-functions/: _category_.json  markdown-features.mdx
docs/python/docs/wrapper-functions/regression-data/: _category_.json
docs/python/docs/wrapper-functions/time-series/: markdown-features.mdx
docs/python/docs/wrapper-functions/unlabeled-data/: _category_.json  mean.md  meanvariance.mdx  variance.mdx
docs/python/src/components/HomepageFeatures/: index.tsx
docs/python/src/pages/: index.tsx
docs/user_guide/: evaluation.html  installation.html  models.html  quickstart.html  tutorials.html  visualization.html
docs_sphinx/: Makefile  conf.py  index.rst
docs_sphinx/advanced/: music_segmentation.rst
docs_sphinx/api/: metrics.rst
docs_sphinx/development/: changelog.rst  roadmap.rst
docs_sphinx/user_guide/: models.rst  visualization.rst
examples/: example_01_basic_metrics.py  example_02_multi_annotator.py  example_03_dataset_generation.py  example_04_end_to_end.py  example_05_complete_pipeline.py  glm_lasso_examples.py  music_segmentation_example.py  quickstart.py
fastcpd/: BUILD  BUILD.bazel  __init__.py  class.cc  datasets.py  fastcpd.py  glm_numba.py  interface.pyi  metrics.py  models.py  pelt_arma_vanilla.py  pelt_garch_vanilla.py  pelt_lasso.py  pelt_lm.py  pelt_nonparametric.py  pelt_sen.py  pelt_sklearn.py  pelt_ts.py  pybind.cc  segmentation.py  sen_glm.py  variance_estimation.py  visualization.py
fastcpd/tests/: __init__.py  test_basic.py  test_sklearn_models.py
inst/include/: fastcpd.h  ref_fastglm_fit_glm.h  ref_fastglm_glm.h  ref_fastglm_glm_base.h  ref_tseries.h
notebooks/: 01_generating_data.ipynb  01_metrics_basics.ipynb  02_dataset_generation.ipynb  02_detecting_changes.ipynb  03_evaluation_and_plots.ipynb
pdoc/: custom.css
python/: BUILD.bazel  __init__.py  pybind.cc
src/: BUILD.bazel  RcppExports.cpp  bindings.cc  fastcpd.cc  fastcpd.h  fastcpd_classes.cc  fastcpd_impl.cc  fastcpd_test.cc  ref_family_python.cc  ref_fastglm_fit_glm.cc  ref_tseries_formats_stub.cc  test-fastcpd.cc
test/: BUILD.bazel  pip_parse_test.py  test_fastcpd.py
tests/: BUILD.bazel  test_datasets.py  test_fastcpd.py  test_metrics.py
tests/testthat/: test-pvalue-distribution.R
user_guide/: evaluation.html  installation.html  models.html  quickstart.html  tutorials.html  visualization.html
