load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("@rules_python//python:py_library.bzl", "py_library")

cc_library(
    name = "class",
    srcs = ["class.cc"],
    hdrs = ["class.h"],
    copts = [
        "-std=c++17",
    ],
    visibility = [
        "//fastcpd/python/cpp:__pkg__",
    ],
    deps = [
        "@armadillo_headers//:armadillo_header",
    ],
)

cc_test(
    name = "class_test",
    size = "small",
    srcs = ["class_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

py_library(
    name = "fastcpd_init",
    srcs = [
        "__init__.py",
        "segmentation.py",
        "variance_estimation.py",
    ],
    deps = [
        ":py_fastcpd",
        "@pypi//numpy:pkg",
    ],
)

py_library(
    name = "fastcpd_py_library",
    deps = [
        ":fastcpd_init",
        ":py_fastcpd",
    ],
)

py_package(
    name = "fastcpd_py_package",
    deps = [
        ":fastcpd_py_library",
    ],
)

py_wheel(
    name = "pyfastcpd",
    # Package data. We're building "example_minimal_package-0.0.1-py3-none-any.whl"
    distribution = "fastcpd",
    python_tag = "py3",
    stamp = 0,
    version = "0.17.0",
    deps = [
        ":fastcpd_py_package",
    ],
)

cc_binary(
    name = "interface",
    srcs = ["pybind.cc"],
    copts = ["-std=c++17"],
    includes = [
        ".",
    ],
    linkopts = select({
        "@platforms//os:osx": ["-undefined dynamic_lookup"],
        "@platforms//os:linux": ["-lopenblas"],
        "@platforms//os:windows": [],
    }),
    linkshared = True,
    linkstatic = select({
        "@platforms//os:osx": False,
        "@platforms//os:linux": True,
        "@platforms//os:windows": True,
    }),
    deps = [
        ":class",
        "@com_github_pybind_pybind11//:pybind11",
        "@local_config_python//:python_headers",
    ],
)

# This wrapper exists to expose the .so binary to python
py_library(
    name = "py_fastcpd",
    data = [
        ":interface",
    ],
    imports = ["."],
)
