cc_library(
    name = "class",
    srcs = ["fastcpd.cc"],
    hdrs = ["fastcpd.h"],
    copts = [
        "-std=c++17",
    ],
    defines = [
        "NO_RCPP",
    ],
    visibility = [
        "//fastcpd/python/cpp:__pkg__",
        "//python:__pkg__",
    ],
    deps = [
        "@armadillo_headers//:armadillo_header",
    ],
)
