load("@rules_python//python:defs.bzl", "py_test")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

# TODO(doccstat): bazel test does not work yet.
# py_test(
#     name = "test_fastcpd",
#     srcs = ["test_fastcpd.py"],
#     deps = [
#         "//fastcpd:fastcpd_init",
#     ],
# )

# For pip dependencies which have entry points, the `entry_point` macro can be
# used from the generated `pip_parse` repository to access a runnable binary.

py_console_script_binary(
    name = "yamllint",
    pkg = "@pypi//yamllint",
)

# Test the use of all pip_parse utilities in a single py_test
py_test(
    name = "pip_parse_test",
    srcs = ["pip_parse_test.py"],
    data = [
        ":yamllint",
        "@pypi//requests:dist_info",
    ],
    env = {
        "WHEEL_DIST_INFO_CONTENTS": "$(rootpaths @pypi//requests:dist_info)",
        "YAMLLINT_ENTRY_POINT": "$(rlocationpath :yamllint)",
    },
    deps = ["@rules_python//python/runfiles"],
)
