config_setting(
    name    = "windows",
    values  = { "cpu": "x64_windows" },
)

cc_library(
    name = "class",
    srcs = ["class.cc"],
    hdrs = ["class.h"],
    copts = select({
        ":windows": [
            "/std:c++17",           # MSVC syntax
        ],
        "//conditions:default": [
            "-std=c++17",           # GCC/Clang syntax
        ],
    }),
    # This visibility is needed for the third-party fastcpd Python bindings.
    visibility = ["//visibility:public"],
    deps = ["@armadillo_headers//:armadillo_header"],
)

cc_test(
    name = "class_test",
    size = "small",
    srcs = ["class_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "hello-time",
    srcs = ["hello-time.cc"],
    hdrs = ["hello-time.h"],
    visibility = [
        "//cc/main:__pkg__",
    ],
)
